fix: nuclear CORS fix to allow all origins